--- a/style.css
+++ b/style.css
@@ -50,16 +50,30 @@ textarea:focus {
 }
 
 .about-me h1 {
-    margin: 8% 0% 3% 0%;
+    margin: 5% 0%;
 }
 
 .about-me .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
     margin: auto;
-    width: 50%;
+    width: 35%;
     overflow-wrap: break-word;
     hyphens: manual;
     white-space: pre-wrap;
     text-align: center;
+}
+
+.about-me .text h3{
+    background-color: white;
+    width: 50%;
+    padding: 10% 10%;
+    border-radius: 10px;
+    margin: 1% 0%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .contact-form {
@@ -141,7 +155,7 @@ textarea:focus {
 }
 
 .projects-container {
-    margin-top: 10%;
+    margin-top: 5%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -168,7 +182,7 @@ textarea:focus {
     transform: scale(1.1);
 }
 
-.projects-container .projects h3 {
+.projects-container .projects .project-tag {
     position: absolute;
     left: 16px;
     bottom: 8px;
@@ -177,10 +191,23 @@ textarea:focus {
     transition: all 0.5s ease-in-out;
 }
 
+.text {
+    margin: 5%;
+    transform: scale(1.0);
+    transition-duration: 0.5s;
+}
+
 #about-me {
     white-space: nowrap;
 }
 
 #contact {
     margin-right: 20%;
+}
+
+#project-header {
+    text-align: center;
+    margin-top: 5%;
+    text-decoration: underline;
+    font-size: 3em;
 }
